# phonetic-ru-keyboard-windows8

./: README.md  russian_phonetic_trukhin.klc
ARM64Workaround/: CMakeLists.txt
ARM64Workaround/layouts/: Russian Phonetic.klc:Zone.Identifier
ARM64Workaround/mklc1.4/: license.rtf  msklc.chm
MacBook Pro 13 2011 /setup/: RTrukhin_ia64.msi
MacBook Pro 13 2011/setup/: RTrukhin_amd64.msi  RTrukhin_i386.msi
MacBook Pro 13 2011/source/: russian_phonetic_trukhin_132011.klc
MacBook Pro Retina 15 2013/setup/: RTrukhin_amd64.msi  RTrukhin_i386.msi  RTrukhin_ia64.msi
MacBook Pro Retina 15 2013/source/: russian_phonetic_trukhin_15Retina2013.klc
